rethinking the provider map